--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.3.0
+  flutter_riverpod: ^2.4.0
+  hooks_riverpod: ^2.4.0
 
 
 dev_dependencies:
